--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         height: 2.05rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: rgba(172, 16, 78, 0.993);
+        background: rgba(242, 90, 35, 0.99);
     }
 
     .DAH{
@@ -112,7 +112,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: gold;
+      color: cyan;
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif;
@@ -135,7 +135,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: gold;
+      color: cyan;
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif;
@@ -157,7 +157,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: gold;
+      color: cyan;
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif; 
@@ -179,7 +179,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: gold;
+      color: cyan;
       padding: 10px;
       font-family: Verdana; 
       font-size: 13.5px;
@@ -542,7 +542,7 @@ hr{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background: rgba(225, 225, 225, 0.963);
+    background: rgba(228, 228, 228, 0.961);
     justify-content: center;
     align-items: center;
     opacity: 0.99;
@@ -558,11 +558,9 @@ hr{
     padding: 20px;
 }
 ::-webkit-scrollbar-thumb{
-    background: -webkit-linear-gradient(#0ab9ff 50%, rgba(255, 85, 0, 0.815) 50%);
+    background: -webkit-linear-gradient(yellow 0%, rgba(12, 156, 12, 0.991) 100%);
     width: 12px;
     height: 30px;
-    border-bottom-left-radius: 0.5rem;
-    border-bottom-right-radius: 0.5rem;
     justify-self: center;
 }
 
@@ -571,7 +569,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #fffffff8;
+    background: #fffffffc;
     width: 99.25%;
     height: auto;
     font-family: 'helvetica';
@@ -2598,11 +2596,11 @@ que les gouvernements font peu de choses pour aider financièrement les personne
                       En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour l'ensemble de sa contribution au développement et l'épanouissement d'une communauté différente, marginalisée dans la société dont les personnes handicapées.
                       <br>
                       <br>
-                      En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. Le 14 Juillet 2016 Gabriel a été invité aux <a href="https://fr.wikipedia.org/wiki/%C3%89tats-Unis" target="_blank"> Etats-Unis </a>pour trois (3) mois pour faire non seulement du networking mais aussi du fundraising et vendre de l'artisanat [Peintures & Batiks] afin de soutenir des projets de Tiki N'Yiki dont l'éducation et la sécurité alimentaire. 
+                      En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. Le 14 Juillet 2016 Gabriel a été invité par ses ami-es aux <a href="https://fr.wikipedia.org/wiki/%C3%89tats-Unis" target="_blank"> Etats-Unis </a>pour quatre (4) mois pour non seulement faire du networking (réseautage) mais aussi du fundraising et vendre de l'artisanat [Peintures & Batiks]. Ce qui a permis de soutenir des projets scolaires et alimentaire de Tiki N'Yiki par l'achat de fournitures et de céréales (riz) pour distribuer aux écoliers dans le besoin. 
                       <br>
                       <br>
                       De la côte-Est [<a href="https://www.nyc.gov/" target="_blank"> NYC-NY</a>, <a href="https://www.boston.gov/" target="_blank">Boston-MA</a>, <a href="https://appleton.maine.gov/" target="_blank"> Appleton-ME</a>, <a href="https://www.burlingtonvt.gov/" target="_blank"> Burlington</a> & <a href="https://www.stjvt.com/" target="_blank"> St Johnsbury-VT</a>] jusqu'à la côte-Ouest [<a href="https://www.portland.gov/" target="_blank"> Portland-OR</a>, <a href="https://www.olympiawa.gov/#section7-anchor" target="_blank"> Olympia-WA</a>] des Etats-Unis avec l'aide efficace d'ami-es, Gabriel a non seulement
-                       eu l'opportunité de présenter le projet Tiki N'Yiki dans des familles d'ami-es, au cours de festivals et/ou de foires mais a aussi pensé à des perpectives futures permettant de bâtir et élargir un réseau de collaborateurs pour développer de nouveaux partenariats et mieux atteindre les differents objectifs en terme d'autonomie et d'inclusion sociale.  
+                       eu l'opportunité de présenter le projet Tiki N'Yiki dans des familles d'ami-es, au cours de festivals et/ou de foires mais a aussi rencontré des gens avec qui il a partagé ses objectifs dans la réalisation des projets de Tiki N'Yiki. Néanmoins il voit en perpectives futures de bâtir et élargir un réseau de collaborateurs et partenaires pour mieux atteindre les differents objectifs en termes d'autonomie, de valorisation et d'inclusion sociale.  
                        <br>
                        <br>
                       En 2017, malheureusement Gabriel était obligé de s'exiler au <a href="https://en.wikipedia.org/wiki/Canada" target="_blank"> Canada </a>pour des raisons sécuritaires. En effet certaines activités de Tiki N'Yiki y compris le projet EDUCATION ont été momentanément arrêtées mais elles vont être redéfinies si les conditions de sécurité se réunissent. 
