--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         height: 2.05rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: rgba(242, 90, 35, 0.99);
+        background: rgba(238, 88, 33, 0.989);
     }
 
     .DAH{
@@ -489,7 +489,7 @@
 .footer{
         display: flex;
         width: 100%;
-        height: 393px;
+        height: 400px;
         position: relative;
         font-family: 'trebuchet ms';
         font-size: 16px;
@@ -2634,7 +2634,7 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 <div class="Thanking" style="padding: 1rem;"> 
   <b style="font-family:'Titillium Web', sans sherif; color: rgba(16, 84, 201, 0.996); font-size: 20px">
-  Merci pour votre attention et vos réactions ! 
+  Merci pour votre visite et vos réactions ! 
 </b>
 </div>
 
