--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ hr{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background: rgba(226, 226, 226, 0.709);
+    background: rgba(233, 233, 233, 0.601);
     justify-content: center;
     align-items: center;
     opacity: 0.99;
@@ -531,7 +531,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #fffffffe;
+    background: #ffffff;
     width: 99.25%;
     height: auto;
     font-family: 'helvetica';
