--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ hr{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background: rgba(255, 255, 255, 0.642);
+    background: rgba(251, 251, 251, 0.642);
     justify-content: center;
     align-items: center;
     opacity: 0.99;
@@ -1919,11 +1919,15 @@ Tiki N'Yiki veut oeuvrer pour changer la tendance de telles mentalités, faire t
     </a> 
     <br>  
     <br>
-    <b style="color: rgb(0, 174, 255); font-size: 19.5px; font-family: 'Titillium Web', sans-serif;">Mais il faut que ces discriminations cessent et que les barrières sociales tombent car les personnes handicapées sont avant tout des êtres humains qui ont aussi des droits humains.</b>
+    <b style="color: rgb(0, 174, 255); font-size: 19.5px; font-family: 'Titillium Web', sans-serif;">
+      Mais il faut que ces discriminations cessent et que 
+      les barrières sociales tombent car les personnes handicapées 
+      sont avant tout des êtres humains qui ont aussi des droits humains.
+    </b>
   </p>
   </div>
 
-  <div class="k1">
+  <div class="k1" style="margin-top: -1.65rem;">
     <hr style="color: rgb(13, 31, 136); justify-self: left;"> 
     <br>  
     <span style="background: transparent; font-family: 'Titillium Web', sans-serif; font-size: 30px; color: rgb(32, 87, 175); text-align: left; line-height: 34px">
@@ -1990,6 +1994,7 @@ que les gouvernements font peu de choses pour aider financièrement les personne
          pour ces enfants handicapés qui risquent de faire face à une suppression de leurs propres droits par leurs propres parents.  
         <br>
         <hr style="color: rgba(239, 54, 7, 0.977); justify-self: center;"> 
+        <br>
         <b style="font-size: 23px; font-family: 'Titillium Web', sans-serif; font-size: 30px; color: rgb(32, 87, 175);">Académie Tiki N'Yiki</b> 
         <br>  
       <p>Il est inimaginable de voir que de personnes handicapées ne soient pas à mesure de partir à l'hôpital quand elles tombent malades, aller étudier, partir au marché, aller au culte ou simplement sortir marcher à cause du manque de moyens de déplacement (transport). 
@@ -2037,6 +2042,7 @@ que les gouvernements font peu de choses pour aider financièrement les personne
         <br>
         <b style="color:#ff0a06">Pour ce faire l'inclusion doit être encouragée et soutenue. </b>
         <br>
+        <br>
         <b style="font-size: 21px; font-family: 'Titillium Web', sans sherif; color: rgba(20, 133, 253, 0.989); text-align: justify; line-height: 27px; font-size: 19.5px;">
           Avoir le droit à l'éducation, aux soins de santé, être à l'abri de l'insécurité alimentaire font partie des objectifs cruciaux que Tiki N'Yiki s'est fixés pour soutenir les enfants à mobilité réduite.</b>
     </p>
@@ -2045,6 +2051,7 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 <div class="k1">
 
   <hr style="color: rgb(13, 31, 136); justify-self: center;"> 
+  <br>
       
   <span style="background: transparent; font-family: 'Titillium Web', sans sherif; font-size: 30px; color: rgb(32, 87, 175); text-align: left;">
         <strong>
