--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@ hr{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background: rgba(242, 242, 242, 0.642);
+    background: transparent;
     justify-content: center;
     align-items: center;
     opacity: 0.99;
@@ -531,7 +531,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #ffffff;
+    background: transparent;
     width: 98%;
     height: auto;
     font-family: 'helvetica';
