--- a/index.html
+++ b/index.html
@@ -2556,7 +2556,7 @@ que les gouvernements font peu de choses pour aider financièrement les personne
                        la promotion et la défense des personnes à mobilité réduite dont les enfants. 
         
                        En 2006 Gabriel etait un des membres fondateurs de l'association PAAS NEERE
-                       </a> dans laquelle il a enseigné des enfants handicapés et orphelins, animé de multiples séances de sensibilisation avec thème focal "Handicap et Inclusion Sociale" de 2006 à 2014.
+                       </a> dans laquelle il a enseigné des enfants handicapés et orphelins, animé de multiples séances de sensibilisation avec comme thème focal "Handicap et Inclusion Sociale".
                        <br>
                        <br>
                        
