--- a/index.html
+++ b/index.html
@@ -2050,7 +2050,7 @@ que les gouvernements font peu de choses pour aider financièrement les personne
     </p>
 </div>
 
-<div class="k1">
+<div class="k1" style="height: 275px;">
 
   <hr style="color: rgb(13, 31, 136); justify-self: center;"> 
   <br>
