--- a/index.html
+++ b/index.html
@@ -2260,8 +2260,8 @@ que les gouvernements font peu de choses pour aider financièrement les personne
           
           <a name="SEKU"></a> 
           
-          partenariats très sûrs avec des hôpitaux, des médécins, du professionel soignant, 
-          d'infirmières afin d'utiliser leur expertise pour soutenir bénévolement en conseils de santé, dans des soins ou à travers autres actions médicales visant a maintenir en bonne santé les enfants handicapés qui n'ont pas
+          partenariats avec des hôpitaux, des médécins, du professionel soignant, 
+          d'infirmières pour soutenir bénévolement en conseils de santé, en soins ou à travers autres actions médicales visant a maintenir en bonne santé les enfants handicapés qui n'ont pas
          <a href="https://www.hi.org/fr/pays/burkina-faso " style="font-size: 18px; font-family: 'Titillium Web', sans sherif; line-height: 22px;" target="_blank"> de couverture
          médicale.
         </a> 
