--- a/index.html
+++ b/index.html
@@ -1818,7 +1818,7 @@ function myFunction() {
    Sa capitale est Ouagadougou. Les habitants du Burkina Faso sont appélés des Burkinabè ou des Burkinabé. 
    <br>
    <br>
-   Le Burkina Faso partage des frontières communes au nord et nord-ouest par le Mali, à l'est par le Niger, au sud par la Côte-d'Ivoire, le Ghana, le Togo et le Bénin.
+   Le Burkina Faso partage des frontières communes au Nord-Ouest par le Mali, au Nord-Est par le Niger, au Sud-Est par le Bénin et au Sud par la Côte-d'Ivoire, le Ghana et le Togo.
    Il bénéficie d'un climat tropical sahélien caracterisé par 4 mois de pluviométrie et 8 mois de sécheresse. En dépit de cette réalité climatique, son économie repose en grande partie sur l'agriculture, l'élévage et le maraîchage
    mais se diversifie de plus en plus à travers d'autres secteurs comme les services et les nouvelles technologies.  
    <br>
