--- a/index.html
+++ b/index.html
@@ -2502,7 +2502,7 @@ que les gouvernements font peu de choses pour aider financièrement les personne
   
   <div class="PHOTOCAPTION">
   <h3>
-      Feu de forêt en Australie
+      Feu en Australie
     </h3>
     </div>
   
@@ -2521,7 +2521,7 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
     <div class="PHOTOCAPTION">
     <h3> 
-        Feu de forêt en Californie
+        Feu en Californie
       </h3>
       </div>
 
@@ -2641,6 +2641,3 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
-
-
-
