--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@ hr{
     margin-bottom: 1rem;
     margin-top: 1.65rem;
     padding: 15px;
-    border-bottom: 0.1rem solid rgba(255, 68, 0, 0.775);
+    border-bottom: 0.13rem solid #cdcdcd91;
     
 }
 .content1 a:hover{
@@ -861,7 +861,7 @@ animation: auto 15s infinite linear;
   justify-content: space-between;
   width: 72%;
   height: auto;
-  border-top: 0.1rem solid orangered;
+  border-top: 0.13rem solid #cdcdcd91;
   margin-top: 5.65rem;
  
 }
@@ -878,16 +878,13 @@ animation: auto 15s infinite linear;
   line-height: 27px;
   text-align: left;
   background:rgba(14, 36, 149, 0);
-  border: 0.15rem solid transparent;
+  border: 0.13rem solid #cdcdcd91;
   padding: 10px;
-  border-bottom: 0.25rem solid transparent;
-  border-radius: 0.4rem;
+  border-radius: 0.25rem;
 }
 .kpt:hover{
   transition: 0.25s linear;
-  border: 0.15rem solid #cdcdcd91;
   color:rgba(104, 104, 104, 0.915);
-  border-radius: 0.4rem;
 }
 
 .kgp{
@@ -2641,3 +2638,4 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
+
