--- a/index.html
+++ b/index.html
@@ -196,12 +196,13 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: #0a0a0afe;
+                background: #fff;
                  width: 100%;
                  height: 112px;
                  object-fit: cover;
-                 box-shadow: 0 2.35px 1rem 0 transparent;
-                 border-top: 0.4rem solid rgba(243, 90, 13, 0.996);
+                
+                 border-top: 0.25rem solid rgba(243, 90, 13, 0.996);
+                 border-bottom: 2px solid #f1f1f1;
                  z-index: 1;
                  top: 0;
                  position: sticky;   
@@ -216,7 +217,7 @@
             cursor: pointer;
             width: 100%;
             background: transparent;
-            color: rgba(209, 210, 230, 0.929);
+            color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Tektur', cursive;
             font-family: 'Titillium Web', sans-serif;
@@ -226,7 +227,7 @@
 }
 
 .TYK1:hover{
-  color: cyan;
+  color: blue;
     transition: 0.25s ease;
 }
 
@@ -238,7 +239,7 @@
             column-gap: 1rem;
             width: 100%; 
             height: 133px; 
-            background: #efefef76;
+            background: #ececec78;
           }
 
           .BIENVENUE{
@@ -294,7 +295,7 @@
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
           background: -webkit-linear-gradient( orangered 0%,#fff 100%);
-          box-shadow: 1.3px 1.2px 0.45rem 0 #979797dc;
+          box-shadow: 1.3px 1.2px 0.45rem 0 #a0a0a0dc;
          }
 
          .tikinyiki:hover{
@@ -316,7 +317,7 @@
             cursor: pointer;
             width: 100%;
             background: transparent;
-            color: rgba(209, 210, 230, 0.929);
+            color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Tektur', cursive;
             font-family: 'Titillium Web', sans-serif;
@@ -325,7 +326,7 @@
           }
 
           .myDiv:hover{
-            color: cyan;
+            color: blue;
             transition: 0.25s ease;
           }
 
@@ -339,14 +340,14 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: rgba(209, 210, 230, 0.929);
+            color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Tektur', cursive;
             font-family: 'Titillium Web', sans-serif;
           }
 
           .myDiv1:hover{
-            color: cyan;
+            color: blue;
             transition: 0.25s ease;
           }
 
@@ -360,14 +361,14 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: rgba(209, 210, 230, 0.929);
+            color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Tektur', cursive;
             font-family: 'Titillium Web', sans-serif;
             }
 
           .myDiv2:hover{
-            color: cyan;
+            color: blue;
             transition: 0.25s ease;
           }
 
@@ -381,13 +382,13 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: rgba(209, 210, 230, 0.929);
+            color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Tektur', cursive;
             font-family: 'Titillium Web', sans-serif;
           }
           .myDivT:hover{
-            color: cyan;
+            color: blue;
             transition: 0.25s ease;
           }
 
@@ -401,14 +402,14 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: rgba(209, 210, 230, 0.929);
+            color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Tektur', cursive;
             font-family: 'Titillium Web', sans-serif;
           }
 
           .Peinture:hover{
-            color: cyan;
+            color: blue;
             transition: 0.25s ease;
           }
 
@@ -423,13 +424,13 @@
             height: 45px;
             width: 100%;
             background: transparent;
-            color: rgba(209, 210, 230, 0.929);
+            color: #4f4f4fe6;
             padding: 9px;
             font-family:'arial';
             }
 
           .myDiv6:hover{
-            color: cyan;
+            color: blue;
             transition: 0.25s ease;
           }
 
@@ -2638,3 +2639,4 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
+
