--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                  width: 100%;
                  height: 112px;
                  object-fit: cover;
-                 border-top: 0.25rem solid rgba(13, 170, 243, 0.996);
+                 border-top: 0.25rem solid rgb(5, 151, 255);
                  border-bottom: 2px solid #f1f1f1;
                  z-index: 1;
                  top: 0;
@@ -218,11 +218,9 @@
             background: transparent;
             color: #4f4f4fe6;
             padding: 9px;
-            font-family: 'Tektur', cursive;
-            font-family: 'Titillium Web', sans-serif;
+            font-family: 'Roboto Slab', serif;
             font-size: 20px;
-            height: 45px;
-           
+            height: 45px;    
 }
 
 .TYK1:hover{
@@ -237,7 +235,7 @@
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 128px; 
+            height: 125px; 
             background: #efefef4a;
           }
 
@@ -305,6 +303,7 @@
           border-top: 0.6rem solid rgb(27, 27, 255);
           color:rgb(27, 76, 255);
           box-shadow: 0.1px 0.1px 0.55rem 0 #c6c6c6ae;
+          font-size: 0.9rem;
          }
 
 
@@ -318,8 +317,7 @@
             background: transparent;
             color: #4f4f4fe6;
             padding: 9px;
-            font-family: 'Tektur', cursive;
-            font-family: 'Titillium Web', sans-serif;
+            font-family: 'Roboto Slab', serif;
             font-size: 20px;
             height: 45px;
           }
@@ -335,14 +333,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-size: 20px;
             height: 45px;
             width: 100%;
             background: transparent;
             color: #4f4f4fe6;
             padding: 9px;
-            font-family: 'Tektur', cursive;
-            font-family: 'Titillium Web', sans-serif;
+            font-family: 'Roboto Slab', serif;
+            font-size: 20px;
           }
 
           .myDiv1:hover{
@@ -356,14 +353,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-size: 20px;
             height: 45px;
             width: 100%;
             background: transparent;
             color: #4f4f4fe6;
             padding: 9px;
-            font-family: 'Tektur', cursive;
-            font-family: 'Titillium Web', sans-serif;
+            font-family: 'Roboto Slab', serif;
+            font-size: 20px;
             }
 
           .myDiv2:hover{
@@ -377,14 +373,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-size: 20px;
             height: 45px;
             width: 100%;
             background: transparent;
             color: #4f4f4fe6;
             padding: 9px;
-            font-family: 'Tektur', cursive;
-            font-family: 'Titillium Web', sans-serif;
+            font-family: 'Roboto Slab', serif;
+            font-size: 20px;
           }
           .myDivT:hover{
             color: blue;
@@ -397,14 +392,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-size: 20px;
             height: 45px;
             width: 100%;
             background: transparent;
             color: #4f4f4fe6;
             padding: 9px;
-            font-family: 'Tektur', cursive;
-            font-family: 'Titillium Web', sans-serif;
+            font-family: 'Roboto Slab', serif;
+            font-size: 20px;
           }
 
           .Peinture:hover{
@@ -419,13 +413,13 @@
             justify-content: center;
             align-items: center;
             cursor: pointer;
-            font-size: 20px;
             height: 45px;
             width: 100%;
             background: transparent;
             color: #4f4f4fe6;
             padding: 9px;
-            font-family:'arial';
+            font-family: 'Roboto Slab', serif;
+            font-size: 20px;
             }
 
           .myDiv6:hover{
@@ -2638,5 +2632,4 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
-
 
