--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         height: 2rem;
         object-fit: cover;
         font-family: 'georgia';
-        background: rgb(243, 90, 13);
+        background: rgb(246, 92, 16);
     }
 
     .DAH{
@@ -200,7 +200,7 @@
                  width: 100%;
                  height: 110px;
                  object-fit: cover;
-                 border-top: 0.25rem solid rgb(5, 151, 255);
+                 border-top: 0.15rem solid #727272e1;
                  border-bottom: 2px solid #f1f1f1;
                  z-index: 1;
                  top: 0;
@@ -219,7 +219,8 @@
             color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 20px;
+            font-size: 19px;
+            word-spacing: -1px;
             height: 45px;    
 }
 
@@ -235,8 +236,8 @@
             justify-items: center;
             column-gap: 1rem;
             width: 100%; 
-            height: 125px; 
-            background: #efefef4a;
+            height: 123px; 
+            background: #efefef3b;
           }
 
           .BIENVENUE{
@@ -318,7 +319,8 @@
             color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 20px;
+            font-size: 19px;
+            word-spacing: -1px;
             height: 45px;
           }
 
@@ -359,7 +361,8 @@
             color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 20px;
+            font-size: 19px;
+            word-spacing: -1px;
             }
 
           .myDiv2:hover{
@@ -379,7 +382,8 @@
             color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 20px;
+            font-size: 19px;
+            word-spacing: -1px;
           }
           .myDivT:hover{
             color: blue;
@@ -398,7 +402,8 @@
             color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 20px;
+            font-size: 19px;
+            word-spacing: -1px;
           }
 
           .Peinture:hover{
@@ -419,7 +424,8 @@
             color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 20px;
+            font-size: 19px;
+            word-spacing: -1px;
             }
 
           .myDiv6:hover{
@@ -2632,5 +2638,6 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
+
 
 
