--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                  width: 100%;
                  height: 110px;
                  object-fit: cover;
-                 border-top: 0.15rem solid #727272e1;
+                 border-top: 0.25rem solid #059fff;
                  border-bottom: 2px solid #f1f1f1;
                  z-index: 1;
                  top: 0;
@@ -2638,6 +2638,4 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
-
-
 
