--- a/index.html
+++ b/index.html
@@ -287,13 +287,13 @@
           font-family: 'Tektur', cursive;
           font-family: 'Titillium Web', sans-serif;
           cursor: pointer;
-          border-top: 0.49rem solid cyan;
+          border-top: 0.49rem solid #000;
           border-right: 0.15rem solid rgba(92, 170, 248, 0.097);
           border-left: 0.15rem solid rgba(92, 170, 248, 0.097);
           border-bottom-left-radius: 30rem;
           border-bottom-right-radius: 30rem;
           background: -webkit-linear-gradient( orangered 0%,#fff 100%);
-          box-shadow: 1.3px 1.2px 0.45rem 0 #a0a0a0dc;
+          box-shadow: 1.3px 1.2px 0.4rem 0 #a0a0a0dc;
          }
 
          .tikinyiki:hover{
@@ -302,7 +302,7 @@
           color: #252525f4;
           border-right: none;
           border-top: 0.6rem solid rgb(27, 27, 255);
-          color:rgb(27, 76, 255);
+          color: #fff;
           box-shadow: 0.1px 0.1px 0.55rem 0 #c6c6c6ae;
           font-size: 0.9rem;
          }
@@ -2638,4 +2638,5 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
+
 
