--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: #fff;
+                background: #fffffff5;
                  width: 100%;
                  height: 110px;
                  object-fit: cover;
@@ -2638,5 +2638,3 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
-
-
