--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@
                  width: 100%;
                  height: 110px;
                  object-fit: cover;
-                 border-top: 0.25rem solid #05acff;
-                 border-bottom: 2px solid #f1f1f1;
+                 
+                 border-bottom: 0.5rem solid #05acff;
                  z-index: 1;
                  top: 0;
                  position: sticky;   
@@ -219,7 +219,7 @@
             color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 19px;
+            font-size: 18.5px;
             word-spacing: -1px;
             height: 45px;    
 }
@@ -319,7 +319,7 @@
             color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 19px;
+            font-size: 18.5px;
             word-spacing: -1px;
             height: 45px;
           }
@@ -341,7 +341,7 @@
             color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 20px;
+            font-size: 18.5px;
           }
 
           .myDiv1:hover{
@@ -361,7 +361,7 @@
             color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 19px;
+            font-size: 18.5px;
             word-spacing: -1px;
             }
 
@@ -382,7 +382,7 @@
             color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 19px;
+            font-size: 18.5px;
             word-spacing: -1px;
           }
           .myDivT:hover{
@@ -402,7 +402,7 @@
             color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 19px;
+            font-size: 18.5px;
             word-spacing: -1px;
           }
 
@@ -424,7 +424,7 @@
             color: #4f4f4fe6;
             padding: 9px;
             font-family: 'Roboto Slab', serif;
-            font-size: 19px;
+            font-size: 18.5px;
             word-spacing: -1px;
             }
 
@@ -2638,3 +2638,4 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
+
