--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 }
 
 .TYK1:hover{
-  color: blue;
+  color: red;
     transition: 0.25s ease;
 }
 
@@ -325,7 +325,7 @@
           }
 
           .myDiv:hover{
-            color: blue;
+            color: red;
             transition: 0.25s ease;
           }
 
@@ -345,7 +345,7 @@
           }
 
           .myDiv1:hover{
-            color: blue;
+            color: red;
             transition: 0.25s ease;
           }
 
@@ -366,7 +366,7 @@
             }
 
           .myDiv2:hover{
-            color: blue;
+            color: red;
             transition: 0.25s ease;
           }
 
@@ -386,7 +386,7 @@
             word-spacing: -1px;
           }
           .myDivT:hover{
-            color: blue;
+            color: red;
             transition: 0.25s ease;
           }
 
@@ -407,7 +407,7 @@
           }
 
           .Peinture:hover{
-            color: blue;
+            color: red;
             transition: 0.25s ease;
           }
 
@@ -429,7 +429,7 @@
             }
 
           .myDiv6:hover{
-            color: blue;
+            color: red;
             transition: 0.25s ease;
           }
 
