--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(1, 250, 250, 0.637);
+      color: rgba(207, 207, 207, 0.835);
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif;
@@ -124,7 +124,7 @@
       transition: 0.3s ease-in;
       width: 100%;
       height: auto;
-      color: cyan;
+      color: #fff;
     }
 
     .Calculator{
@@ -134,7 +134,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(1, 250, 250, 0.637);
+      color: rgba(207, 207, 207, 0.835);
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif;
@@ -146,7 +146,7 @@
       transition: 0.3s ease-in;
       width: 100%;
       height: auto;
-      color: cyan;
+      color: #fff;
     }
     
     .dico{
@@ -156,7 +156,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(1, 250, 250, 0.637);
+      color: rgba(207, 207, 207, 0.835);
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif; 
@@ -168,7 +168,7 @@
       transition: 0.3s ease-in;
       width: 100%;
       height: auto;
-      color: cyan;
+      color: #fff;
     }
 
     .datime{
@@ -178,7 +178,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(1, 250, 250, 0.637);
+      color: rgba(207, 207, 207, 0.835);
       padding: 10px;
       font-family: Verdana; 
       font-size: 13.5px;
@@ -189,7 +189,7 @@
       transition: 0.3s ease-in;
       width: 100%;
       height: auto;
-      color: cyan;
+      color: #fff;
     }
     
     .navbar{
@@ -2638,4 +2638,5 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
+
 
