--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@ hr{
     flex-direction: column;
     width: 100%;
     height: auto;
-    background: transparent;
+    background: #e9e9e9f9;
     justify-content: center;
     align-items: center;
     opacity: 0.99;
@@ -534,8 +534,8 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: transparent;
-    width: 98%;
+    background: #fff;
+    width: 97%;
     height: auto;
     font-family: 'helvetica';
     color: rgb(55, 55, 55);
@@ -2638,5 +2638,4 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
-
 
