--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@ animation: auto 15s infinite linear;
     height: auto;
     font-family: 'Roboto Slab', serif;
     font-size: 1.15rem; 
-    line-height: 28.5px;
+    line-height: 1.8;
     color:#3d3d3de2;
     padding: 25px;
 }
@@ -875,7 +875,7 @@ animation: auto 15s infinite linear;
   font-family: 'Titillium Web', sans-serif;
   font-size: 17.49px;
   color:rgba(52, 51, 51, 0.95);
-  line-height: 27px;
+  line-height: 1.8;
   text-align: left;
   background:rgba(14, 36, 149, 0);
   border: 0.13rem solid #cdcdcd91;
@@ -931,7 +931,7 @@ animation: auto 15s infinite linear;
     height: auto;
     font-family: 'Roboto Slab', serif;
     font-size: 1.15rem; 
-    line-height: 28.5px;
+    line-height: 1.8;
     color:#3d3d3de2;
     padding: 14px;
 }
@@ -1079,7 +1079,7 @@ height: 750px;
   border-radius: 50%; 
   font-family:'Titillium Web', sans sherif;
   font-size: 22px; 
-  line-height: 30px;
+  line-height: 1.8;
   cursor: pointer;
   padding: 20px;
   color: yellow;
@@ -1198,7 +1198,7 @@ height: 220px;
   width: 100%;
   font-family: 'Roboto Slab', serif;
   font-size: 1.15rem; 
-    line-height: 28.5px;
+  line-height: 1.8;
     color:#3d3d3de2;
     text-align: justify;
 }
@@ -1215,7 +1215,7 @@ height: 220px;
     height: auto;
     font-family: 'Roboto Slab', serif;
     font-size: 1.15rem; 
-    line-height: 28.5px;
+    line-height: 1.8;
     color:#3d3d3de2;
     padding: 14px;
 }
@@ -1233,7 +1233,7 @@ height: 220px;
   height: auto;
   font-family: 'Roboto Slab', serif;
   font-size: 1.15rem; 
-    line-height: 28.5px;
+  line-height: 1.8;
     color:#3d3d3de2;
 }
 
@@ -1283,7 +1283,7 @@ transition: 0.26s linear;
   height: auto;
   font-family: 'Roboto Slab', serif;
   font-size: 1.15rem; 
-    line-height: 28.5px;
+  line-height: 1.8;
     color:#3d3d3de2;
     border-top: 0.1rem solid #000;
     border-bottom: 0.1rem solid #000;
@@ -1312,7 +1312,7 @@ transition: 0.26s linear;
 .Texo{
   font-family: 'Roboto Slab', serif;
   font-size: 1.15rem; 
-    line-height: 28.5px;
+  line-height: 1.8;
     color:#3d3d3de2;
     text-align: justify;
 }
@@ -1326,7 +1326,7 @@ transition: 0.26s linear;
   height: auto;
   font-family: 'Roboto Slab', serif;
   font-size: 1.15rem; 
-    line-height: 28.6px;
+  line-height: 1.8;
     color:#3d3d3de2;
     padding: 25px;
     border-bottom: 0.1rem solid #000;
@@ -1373,7 +1373,7 @@ transition: 0.26s linear;
   height: 100px;
   font-family: 'Roboto Slab', serif;
   font-size: 1.15rem; 
-    line-height: 28.6px;
+  line-height: 1.8;
     color:#3d3d3de2;
 }
 
@@ -2047,7 +2047,7 @@ que les gouvernements font peu de choses pour aider financièrement les personne
     </p>
 </div>
 
-<div class="k1" style="height: 275px;">
+<div class="k1">
 
   <hr style="color: rgb(13, 31, 136); justify-self: center;"> 
   <br>
@@ -2638,4 +2638,5 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
+
 
