--- a/index.html
+++ b/index.html
@@ -1609,10 +1609,12 @@ function myFunction() {
   </a>
 
   <div class="BIENVENUE"> 
-  Bienvenue sur ce site internet en développement ! Cette page internet est sommairement descriptive du contenu du site.
+  <p>Bienvenue sur ce site internet en développement ! Cette page internet est sommairement descriptive du contenu du site.
   Certaines photos, favicons et certains liens hypertextes sont temporaires.
 <br>
-<b style="color: green;">Merci pour votre compréhension ! Bonne Visite !</b></p>
+<b style="color: green;">Merci pour votre compréhension ! Bonne Visite !
+</b>
+</p>
 </div>
 
 </div>
@@ -2673,6 +2675,3 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
-
-
-
