--- a/index.html
+++ b/index.html
@@ -2594,7 +2594,7 @@ que les gouvernements font peu de choses pour aider financièrement les personne
                      Il aime la nature, la photographie, l'histoire, la géographie, l'architecture, le cyclisme, le football et le hockey.
                     </span>
                   </p>
-                    <button class="button" onclick="myFunction()" id="myBtn">Read more</button>
+                    <button class="button" onclick="myFunction()" id="myBtn">Lire Plus</button>
                     
                     <script>
                     function myFunction() {
@@ -2604,11 +2604,11 @@ que les gouvernements font peu de choses pour aider financièrement les personne
                     
                       if (dots.style.display === "none") {
                         dots.style.display = "inline";
-                        btnText.innerHTML = "Read more"; 
+                        btnText.innerHTML = "Lire Plus"; 
                         moreText.style.display = "none";
                       } else {
                         dots.style.display = "none";
-                        btnText.innerHTML = "Read less"; 
+                        btnText.innerHTML = "Lire Moins"; 
                         moreText.style.display = "inline";
                       }
                     }
