--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
         width: 100%;
         height: 2rem;
         object-fit: cover;
-        font-family: 'georgia';
-        background: #2a2a2ae8;
+        background: #000;
     }
 
     .DAH{
