--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
         flex-direction: column;
         align-items: center;  
         text-align: center; 
-        border-top: 0.5px solid #fff;   
+        border-top: 0.45rem solid gold;   
     }
 
  h2{
