--- a/index.html
+++ b/index.html
@@ -293,13 +293,14 @@
          }
 
          .tikinyiki:hover{
+          transform: rotate(360deg);
           background: #000;
-          transition: 0.12s ease-in;
+          transition: 0.65s ease-out;
           color: #252525f4;
           border-right: none;
-          border-top: 0.6rem solid rgb(27, 27, 255);
+          border-radius: 50%;
           color: #fff;
-          box-shadow: 0.1px 0.1px 0.55rem 0 #c6c6c6ae;
+          box-shadow: 0.1px 0.1px 0.85rem 0 #646464ae;
           font-size: 0.9rem;
          }
 
