--- a/index.html
+++ b/index.html
@@ -294,13 +294,13 @@
 
          .tikinyiki:hover{
           transform: rotate(360deg);
-          background: #000;
+          background: -webkit-linear-gradient(#656565,#000);
           transition: 0.65s ease-out;
           color: #252525f4;
           border-right: none;
           border-radius: 50%;
           color: #fff;
-          box-shadow: 0.1px 0.1px 0.85rem 0 #646464ae;
+          box-shadow: 0.1px 0.1px 1rem 0 #646464ae;
           font-size: 0.9rem;
          }
 
