--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(207, 207, 207, 0.835);
+      color: rgba(222, 222, 222, 0.898);
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif;
@@ -130,7 +130,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(207, 207, 207, 0.835);
+      color: rgba(222, 222, 222, 0.898);
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif;
@@ -152,7 +152,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(207, 207, 207, 0.835);
+      color: rgba(222, 222, 222, 0.898);
       padding: 10px;
       font-family: 'Tektur', cursive;
       font-family: 'Titillium Web', sans-serif; 
@@ -174,7 +174,7 @@
       align-items: center;
       width: 100%;
       height: auto;
-      color: rgba(207, 207, 207, 0.835);
+      color: rgba(222, 222, 222, 0.898);
       padding: 10px;
       font-family: Verdana; 
       font-size: 13.5px;
@@ -294,14 +294,13 @@
 
          .tikinyiki:hover{
           transform: rotate(360deg);
-          background: -webkit-linear-gradient(#656565,#000);
-          transition: 0.65s ease-out;
-          color: #252525f4;
+          background: -webkit-linear-gradient(#717171,#000000fc);
+          transition: 0.33s ease-out;
           border-right: none;
           border-radius: 50%;
           color: #fff;
-          box-shadow: 0.1px 0.1px 1rem 0 #646464ae;
-          font-size: 0.9rem;
+          box-shadow: 0.1px 0.1px 1rem 0 #3b3b3bae;
+          font-size: 0.8rem;
          }
 
 
