--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
           justify-items: center; 
           color: rgba(1, 6, 11, 0.968);
           width: 100%; 
-          height: 65px; 
+          height: 70px; 
           padding: 4px;
           font-size: 0.9rem; 
           font-family: 'Tektur', cursive;
@@ -300,7 +300,8 @@
           border-radius: 50%;
           color: #fff;
           box-shadow: 0.1px 0.1px 1rem 0 #3b3b3bae;
-          font-size: 0.8rem;
+          font-size: 0.93rem;
+          padding: 5px;
          }
 
 
