--- a/index.html
+++ b/index.html
@@ -218,11 +218,15 @@
             font-size: 18.5px;
             word-spacing: -1px;
             height: 45px;    
+            border: 0.13rem solid transparent;
 }
 
 .TYK1:hover{
   color: red;
-    transition: 0.25s ease;
+    transition: 0.3s linear;
+    border: 0.13rem solid rgba(189, 189, 189, 0.925);
+    border-radius: 0.85rem;
+    background-color: #f1f1f1;
 }
 
 .navbar0{
@@ -319,11 +323,15 @@
             font-size: 18.5px;
             word-spacing: -1px;
             height: 45px;
+            border: 0.13rem solid transparent;
           }
 
           .myDiv:hover{
             color: red;
-            transition: 0.25s ease;
+    transition: 0.3s linear;
+    border: 0.13rem solid rgba(189, 189, 189, 0.925);
+    border-radius: 0.85rem;
+    background-color: #f1f1f1;
           }
 
           .myDiv1{
@@ -339,11 +347,16 @@
             padding: 9px;
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
+            word-spacing: -1px;
+            border: 0.13rem solid transparent;
           }
 
           .myDiv1:hover{
             color: red;
-            transition: 0.25s ease;
+    transition: 0.3s linear;
+    border: 0.13rem solid rgba(189, 189, 189, 0.925);
+    border-radius: 0.85rem;
+    background-color: #f1f1f1;
           }
 
           .myDiv2{
@@ -360,11 +373,15 @@
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
+            border: 0.13rem solid transparent;
             }
 
           .myDiv2:hover{
             color: red;
-            transition: 0.25s ease;
+    transition: 0.3s linear;
+    border: 0.13rem solid rgba(189, 189, 189, 0.925);
+    border-radius: 0.85rem;
+    background-color: #f1f1f1;
           }
 
           .myDivT{
@@ -381,10 +398,14 @@
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
+            border: 0.13rem solid transparent;
           }
           .myDivT:hover{
             color: red;
-            transition: 0.25s ease;
+    transition: 0.3s linear;
+    border: 0.13rem solid rgba(189, 189, 189, 0.925);
+    border-radius: 0.85rem;
+    background-color: #f1f1f1;
           }
 
           .Peinture{
@@ -401,11 +422,15 @@
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
+            border: 0.13rem solid transparent;
           }
 
           .Peinture:hover{
             color: red;
-            transition: 0.25s ease;
+    transition: 0.3s linear;
+    border: 0.13rem solid rgba(189, 189, 189, 0.925);
+    border-radius: 0.85rem;
+    background-color: #f1f1f1;
           }
 
 
@@ -423,11 +448,15 @@
             font-family: 'Roboto Slab', serif;
             font-size: 18.5px;
             word-spacing: -1px;
+            border: 0.13rem solid transparent;
             }
 
           .myDiv6:hover{
             color: red;
-            transition: 0.25s ease;
+    transition: 0.3s linear;
+    border: 0.13rem solid rgba(189, 189, 189, 0.925);
+    border-radius: 0.85rem;
+    background-color: #f1f1f1;
           }
 
           
@@ -2671,4 +2700,3 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 </body>
 </html>
-
