--- a/index.html
+++ b/index.html
@@ -192,12 +192,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-                background: #ffffffe9;
+                background: #fff;
                  width: 100%;
                  height: 110px;
                  object-fit: cover;
                  border-bottom: 0.5rem solid #05acff;
-                 box-shadow: 0 3px 2rem 4px #000;
           }
           
           
@@ -235,7 +234,7 @@
             width: 100%; 
             height: 123px; 
             background: #fff;
-            box-shadow: 0 -3px 5rem 8px #10affe80;
+            box-shadow: 0 -3px 4rem 8px #10affe80;
           }
 
           .BIENVENUE{
