--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             column-gap: 1rem;
             width: 100%; 
             height: 123px; 
-            background: #fff;
+            background: transparent;
             box-shadow: 0 -3px 4rem 8px #10affe80;
           }
 
