--- a/index.html
+++ b/index.html
@@ -194,9 +194,10 @@
       align-items: center;
                 background: #fff;
                  width: 100%;
-                 height: 110px;
+                 height: 84px;
                  object-fit: cover;
                  border-bottom: 0.5rem solid #05acff;
+                 box-shadow: 0 -9px 1.45rem 0#3a3a3aea;
           }
           
           
@@ -230,9 +231,9 @@
             grid-template-columns: 0.5fr 1.5fr;
             justify-content: center;
             justify-items: center;
-            column-gap: 1rem;
+            column-gap: 0.5rem;
             width: 100%; 
-            height: 123px; 
+            height: 115px; 
             background: transparent;
             box-shadow: 0 -3px 4rem 8px #10affe80;
           }
@@ -278,7 +279,7 @@
           justify-items: center; 
           color: rgba(1, 6, 11, 0.968);
           width: 100%; 
-          height: 70px; 
+          height: 63px; 
           padding: 4px;
           font-size: 0.9rem; 
           font-family: 'Tektur', cursive;
