--- a/index.html
+++ b/index.html
@@ -196,8 +196,11 @@
                  width: 100%;
                  height: 78px;
                  object-fit: cover;
-                 border-bottom: 0.01rem solid #05acff5c;
-                 box-shadow: 0 -9.5px 0.65rem 0 #212121f9;
+                 border-bottom: 0.01rem solid #05acff71;
+                 box-shadow: 0 -4.5px 2rem 4px #10affe29;
+                 position: sticky;
+                 top: 0;
+                 z-index: 1;
           }
           
           
