--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       align-items: center;
                 background: #fff;
                  width: 100%;
-                 height: 78px;
+                 height: 75px;
                  object-fit: cover;
                  border-bottom: 0.01rem solid #05acff71;
                  box-shadow: 0 -4.5px 2rem 4px #10affe29;
@@ -282,7 +282,7 @@
           justify-items: center; 
           color: rgba(1, 6, 11, 0.968);
           width: 100%; 
-          height: 62px; 
+          height: 58px; 
           padding: 4px;
           font-size: 0.9rem; 
           font-family: 'Tektur', cursive;
@@ -300,12 +300,13 @@
          .tikinyiki:hover{
           transform: rotate(360deg);
           background: -webkit-linear-gradient(#717171,#000000fc);
-          transition: 0.33s ease-out;
-          border-right: none;
+          transition: 0.3s ease-out;
+          border-right: 0.15rem solid transparent;
+          border-left: 0.15rem solid transparent;
           border-radius: 50%;
           color: #fff;
           box-shadow: 0.1px 0.1px 1rem 0 #3b3b3bae;
-          font-size: 0.93rem;
+          font-size: 0.9rem;
           padding: 5px;
          }
 
