--- a/index.html
+++ b/index.html
@@ -1624,7 +1624,7 @@ function myFunction() {
   <p>Bienvenue sur ce site internet en développement ! Cette page internet est sommairement descriptive du contenu du site.
   Certaines photos, favicons et certains liens hypertextes sont temporaires.
 <br>
-<b style="color: green;">Merci pour votre compréhension ! Bonne Visite !
+<b style="color: rgba(48, 48, 48, 0.907);">Merci pour votre compréhension ! Bonne Visite !
 </b>
 </p>
 </div>
@@ -1637,7 +1637,7 @@ function myFunction() {
 
 <img src="https://www.zupimages.net/up/23/31/zxgr.jpg" alt="Soleil couchant au Burkina Faso">
 <figure>
-  <figcaption style=" background: #fffffff9; font-family: 'Tektur', cursive; color: orangered; font-size: 14px; padding: 12px; margin-left: 1rem;">Soleil couchant de Nagreongo au Burkina Faso [ Copyright © 2013-GCK ]</figcaption>
+  <figcaption style=" background: #fffffff9; font-family: 'Tektur', cursive; color: #828282e4; font-size: 15px; padding: 13px; margin-left: 1rem;"><b>Soleil couchant de Nagreongo - Burkina Faso [ Copyright © 2013-GCK ]</b></figcaption>
   </figure>
 </div>
 
