--- a/index.html
+++ b/index.html
@@ -1353,6 +1353,7 @@ transition: 0.26s linear;
   grid-template-rows: 0.35fr 0.35fr;
   justify-content: center;
   justify-items: center;
+  background: #2c18e809;
   width: 74%;
   height: auto;
   font-family: 'Roboto Slab', serif;
