--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
       align-items: center;
                 background: #fff;
                  width: 100%;
-                 height: 62px;
+                 height: 63px;
                  object-fit: cover;
                  border-bottom: 0.01rem solid #05acff71;
-                 box-shadow: 0 -4.5px 2rem 4px #10affe29;
+                 box-shadow: 0 -4.5px 2rem 4px #10affe2c;
                  position: sticky;
                  top: 0;
                  z-index: 1;
@@ -282,9 +282,9 @@
           justify-items: center; 
           color: rgba(1, 6, 11, 0.968);
           width: 100%; 
-          height: 45px; 
+          height: 47px; 
           padding: 4px;
-          font-size: 0.7rem; 
+          font-size: 0.75rem; 
           font-family: 'Tektur', cursive;
           font-family: 'Titillium Web', sans-serif;
           cursor: pointer;
@@ -295,6 +295,7 @@
           border-bottom-right-radius: 30rem;
           background: -webkit-linear-gradient( orangered 0%,#fff 100%);
           box-shadow: 1.3px 1.2px 0.5rem 0 #a0a0a0dc;
+          word-spacing: -1px;
          }
 
          .tikinyiki:hover{
@@ -887,6 +888,7 @@ animation: auto 15s infinite linear;
   height: auto;
   border-top: 0.13rem solid #cdcdcd91;
   margin-top: 5.65rem;
+  background-color: rgba(201, 201, 255, 0.128);
  
 }
 
@@ -899,17 +901,16 @@ animation: auto 15s infinite linear;
   font-family: 'Titillium Web', sans-serif;
   font-size: 17.49px;
   color:rgba(52, 51, 51, 0.95);
-  line-height: 1.8;
+  line-height: 1.7;
   text-align: left;
   background:rgba(14, 36, 149, 0);
-  border: 0.13rem solid #cdcdcd91;
-  padding: 10px;
+  padding: 15px;
   border-radius: 0.25rem;
 }
 
 .kpt:hover{
   transition: 0.25s linear;
-  color:rgba(104, 104, 104, 0.915);
+  color:rgb(0, 0, 0);
 }
 
 #more {display: none;
@@ -2098,13 +2099,13 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
       </p> 
         <b>
-     <a href="https://www.education.gov.bf/accueil" style="color: green;" target="blank">1. L'éducation</a>
+     <a href="#Education" style="color: green;" target="blank">1. L'éducation</a>
          <br>
-     <a href="https://www.sante.gov.bf/accueil" style="color: green;" target="blank">2. La santé et les soins</a>
+     <a href="#HLTHY" style="color: green;" target="blank">2. La santé et les soins</a>
          <br>
-     <a href="https://fews.net/fr/west-africa/burkina-faso/food-security-outlook/february-2022" style="color: green;" target="blank">3. La sécurité alimentaire</a>
+     <a href="#SEKU" style="color: green;" target="blank">3. La sécurité alimentaire</a>
          <br>
-     <a href="https://www.un.org/fr/climatechange/what-is-climate-change" style="color: green;" target="blank">4. Le changement climatique</a> 
+     <a href="#CHANGE" style="color: green;" target="blank">4. Le changement climatique</a> 
      </b>
     </div>
 
