--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #fff;
+    background: #6857ff00;
     width: 100%;
     height: auto;
     font-family: 'helvetica';
@@ -900,7 +900,7 @@ animation: auto 15s infinite linear;
   font-family: 'Tektur', cursive;
   font-family: 'Titillium Web', sans-serif;
   font-size: 17.49px;
-  color:rgba(52, 51, 51, 0.95);
+  color:rgba(28, 28, 28, 0.95);
   line-height: 1.7;
   text-align: left;
   background:rgba(14, 36, 149, 0);
