--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@ hr{
     grid-auto-flow: row;
     justify-content: center;
     justify-items: center;
-    background: #b5c1ff00;
+    background: #d4dcff00;
     width: 100%;
     height: auto;
     font-family: 'helvetica';
@@ -838,7 +838,7 @@ animation: auto 15s infinite linear;
 
 .k1{
     display: grid;
-    background: #2c18e809;
+    background: #4940f909;
     justify-items: left;
     justify-content: center;
     text-align: justify;
@@ -2426,7 +2426,7 @@ que les gouvernements font peu de choses pour aider financièrement les personne
 
 <div class="Texo">
   <p>
-    <br><b style="word-spacing: normal; font-family: 'Titillium Web', sans sherif; color: rgba(16, 172, 16, 0.948); font-size: 18px; line-height: 18px;">  N.B. Les changements climatiques sont réelles et se passent maintenant sous nos yeux témoins. Il suffit de voir et remarquer autour de soi.
+    <br><b style="word-spacing: normal; font-family: 'Titillium Web', sans sherif; color: rgba(16, 172, 16, 0.948); font-size: 18px; line-height: 18px;">  N.B. Les changements climatiques sont réels et se passent maintenant. Il suffit de voir et remarquer autour de soi.
       Que fait l'homme pour mitiger cette tendance qui modifie et modifiera l'environnement et par ricocher toute vie sur terre ?
     </b>
     <br>
@@ -2607,7 +2607,7 @@ que les gouvernements font peu de choses pour aider financièrement les personne
                       En 2012, il a été décoré Chevalier de l'Ordre du Mérite par l'état du Burkina Faso pour l'ensemble de sa contribution au développement et l'épanouissement des personnes à mobilité réduite.
                       <br>
                       <br>
-                      En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. Le 14 Juillet 2016 Gabriel a été invité par ses ami-es aux <a href="https://fr.wikipedia.org/wiki/%C3%89tats-Unis" target="_blank"> Etats-Unis </a>pour quatre (4) mois pour non seulement faire du networking (réseautage) mais aussi du fundraising et vendre de l'artisanat [Peintures & Batiks]. Ce qui a permis de soutenir des projets scolaires et alimentaires de Tiki N'Yiki par l'achat de fournitures et de céréales (riz) pour distribuer aux écoliers dans le besoin. 
+                      En 2016 il a créé Tiki N'Yiki pour élargir le soutien aux enfants orphelins et à d'autres enfants marginalisés. Le 14 Juillet 2016 Gabriel a été invité par ses ami-es aux <a href="https://fr.wikipedia.org/wiki/%C3%89tats-Unis" target="_blank"> Etats-Unis </a>pour quatre (4) mois pour faire non seulement du networking (réseautage) mais aussi du fundraising et vendre des objets d'art [Peintures & Batiks]. 
                       <br>
                       <br>
                       De la côte-Est [<a href="https://www.nyc.gov/" target="_blank"> NYC-NY</a>, <a href="https://www.boston.gov/" target="_blank">Boston-MA</a>, <a href="https://appleton.maine.gov/" target="_blank"> Appleton-ME</a>, <a href="https://www.burlingtonvt.gov/" target="_blank"> Burlington</a> & <a href="https://www.stjvt.com/" target="_blank"> St Johnsbury-VT</a>] jusqu'à la côte-Ouest [<a href="https://www.portland.gov/" target="_blank"> Portland-OR</a>, <a href="https://www.olympiawa.gov/#section7-anchor" target="_blank"> Olympia-WA</a>] des Etats-Unis avec l'aide efficace d'ami-es, Gabriel a non seulement
@@ -2615,7 +2615,6 @@ que les gouvernements font peu de choses pour aider financièrement les personne
                        <br>
                        <br>
                       En 2017, malheureusement Gabriel était obligé de s'exiler au <a href="https://en.wikipedia.org/wiki/Canada" target="_blank"> Canada </a>pour des raisons sécuritaires. En effet certaines activités de Tiki N'Yiki y compris le projet EDUCATION ont été momentanément arrêtées mais elles vont être redéfinies si les conditions de sécurité se réunissent. 
-                      <br>
                       <br>
                       Il se reconstruit une nouvelle vie. Entre autres, il écrit ses mémoires, apprend le code informatique tout en souhaitant se former aux sciences des nouvelles technologies. Il se passionne dans le développement de ce site internet. 
                       <br>
